修改bug，添加弹框

--- a/src/ToDoBox/ToDoList/ToDoListItem/_ToDoListItem.css
+++ b/src/ToDoBox/ToDoList/ToDoListItem/_ToDoListItem.css
@@ -18,3 +18,13 @@
     margin-left: 10px;
     padding: 0 4px;
 }
+
+.toDoList-item-icon {
+    float: right;
+    margin-right: 20px;
+    color: #ffcc33
+}
+.toDoList-item-icon:hover {
+    cursor: pointer;
+    transform: rotate(-45deg);
+}
