--- a/src/ToDoBox/ToDoList/ToDoListItem/_ToDoListItem.css
+++ b/src/ToDoBox/ToDoList/ToDoListItem/_ToDoListItem.css
@@ -1,11 +1,11 @@
-.toDoList-item-btn {
-    float: right;
+.toDoList-item {
+    position: relative;
 }
-.toDoList-item-btn-ok, .toDoList-item-btn-del {
-    margin-right: 10px;
-    width: 44px;
-    height: 21px;
+
+.toDoList-item-btn:hover {
+    cursor: pointer;
 }
+
 .toDoList-item-checkbox {
     height: 14px;
     width: 14px;
@@ -22,9 +22,54 @@
 .toDoList-item-icon {
     float: right;
     margin-right: 20px;
-    color: #ffcc33
+    color: #ffcc33;
+    line-height: 24px;
 }
 .toDoList-item-icon:hover {
     cursor: pointer;
     transform: rotate(-45deg);
+}
+.toDoList-item-btn-wrap {
+    position: absolute;
+    background: #FFF5EE;
+    top: 0;
+    right: -10px;
+    padding: 4px 20px;
+    border: 1px solid #e3e3e3;
+    border-radius: 5px;
+}
+.confirm-mask {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.5);
+}
+.confirm-wrap {
+    background: #fff;
+    width: 250px;
+    height: 150px;
+    border-radius: 5px;
+    margin: 200px auto;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.confirm-btn {
+    margin-top: 60px;
+    padding: 4px 10px;
+    box-sizing: border-box;
+    background: #00aaf1;
+    border-radius: 5px;
+    font-size: 12px;
+    color: #fff;
+}
+.confirm-btn:hover {
+    cursor: pointer;
+    background: #43c0f4;
+}
+.confirm-btn:active {
+    background: #00a9f0;
 }
