完善弹框功能

--- a/src/ToDoBox/ToDoList/_ToDoList.css
+++ b/src/ToDoBox/ToDoList/_ToDoList.css
@@ -18,7 +18,7 @@
 .toDoList-body li > input {
     height: 13px;
 }
-.toDoList-body li span {
+.toDoList-body li > span {
     margin-left: 10px;
     display: inline-block;
 }
