--- a/src/ToDoBox/ToDoList/_ToDoList.css
+++ b/src/ToDoBox/ToDoList/_ToDoList.css
@@ -3,6 +3,7 @@
     border: 1px solid #e3e3e3;
     border-radius: 5px;
     background: #fff;
+    position: relative;
 }
 .toDoList-body {
     list-style: none;
